# jidouteki

./: README.md  pyproject.toml
src/jidouteki/: __init__.py  decorators.py  exceptions.py
src/jidouteki/config/: __init__.py  decorators.py
src/jidouteki/parser/: __init__.py
src/jidouteki/provider/: __init__.py  config.py  decorators.py  dispatcher.py  fetch.py  get.py  has.py  objects.py  params.py  provider.py  test.py
src/jidouteki/tests/: __init__.py  result.py
src/jidouteki/utils/: __init__.py  consts.py
tests/: test_jidouteki.py
